traduction et login

--- a/app/Resources/views/includes/footer.html.twig
+++ b/app/Resources/views/includes/footer.html.twig
@@ -2,12 +2,54 @@
 <div class="footer center section" id="section3">
 	<br/><br/>
 	<div class="row80">
-		<div class="center italic">
-			" Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis excepturi, in dolor tenetur ipsam. Expedita deleniti veritatis nesciunt autem, voluptas doloremque eius animi dolorum perspiciatis labore. Recusandae, voluptate doloremque totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis excepturi, in dolor tenetur ipsam. Expedita deleniti veritatis nesciunt autem, voluptas doloremque eius animi dolorum perspiciatis labore. Recusandae, voluptate doloremque totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis excepturi, in dolor tenetur ipsam. Expedita deleniti veritatis nesciunt autem, voluptas doloremque eius animi dolorum perspiciatis labore. Recusandae, voluptate doloremque totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. "
-		</div>
-		<div class="right bold">
-			- Someone important
-		</div>
+		<h2 class="h2_contact">
+			Contact
+		</h2>
+
+		<form id="" method="post">
+	        <div id="" class="">
+	        	<div class="form-group">
+	        		<div class="col-md-2">
+		            	<label class="control-label" for="emailContact">Email</label>
+	        		</div>
+					<div class="input-icon col-md-10">
+						<input type="email" name="emailContact" id="emailContact" placeholder="john.diggle@gmail.com" class="form-control placeholder-no-fix"/>
+			        </div>
+				</div>
+				<br/><br/><br/>
+	            <div class="form-group">
+	            	<div class="col-md-2">
+		                <label class="control-label" for="sujetMail">Objet</label>
+	            	</div>
+	            	<div class="input-icon col-md-10">
+		                <select name="sujetMail" id="objet" class="form-control placeholder-no-fix">
+		                    <option value="" selected="selected">Sélectionner l'objet de votre demande</option>
+		                    <option value="SM0">Changer mes coordonnées bancaires</option>
+							<option value="SM1">Changer mon adresse de facturation</option>
+							<option value="SM2">Résilier mon offre</option>
+							<option value="SM3">Activer votre nouvelle carte sim</option>
+							<option value="SM4">Paramétrer ou résoudre une panne de mon mobile</option>
+							<option value="SM5">Résoudre une panne de ma Bbox</option>
+							<option value="SM6">Comprendre ma facture</option>
+							<option value="SM7">Comprendre mes paiements</option>
+							<option value="SM8">Les forfaits B&amp;You</option>
+							<option value="SM9">Autre demande</option>
+						</select>
+	            	</div>
+	          	</div> 	
+				<br/><br/>
+	            <div class="form-group">
+	            	<div class="col-md-2">
+		                <label class="control-label" for="corpsMail">Demande</label>
+	            	</div>
+	                <div class="input-icon col-md-10">
+	                	<textarea class="form-control placeholder-no-fix" name="corpsMail" id="corpsMail" placeholder="Texte limité à 2000 caractères"></textarea>
+	                </div>
+	            </div>
+	        </div>
+	        <br/><br/><br/>
+	         <input type="submit" value="Envoyer" class="btn btn-log" title="Envoyer">
+	    </form>
 	</div>
 	<br/>
 	<div class="row border_white_top multiple_lists footer_part">
