--- a/app/Resources/views/includes/social.html.twig
+++ b/app/Resources/views/includes/social.html.twig
@@ -1,26 +1,25 @@
-<!-- Language selection  -->
-
-<div id="social_media">  
-    <a href="https://www.facebook.com/" target="_blank">
-      <div class="social social_fb"></div>
-    </a>
-    <br/>
-    <a href="https://twitter.com/" target="_blank" rel="external">
-      <div class="social social_tw"></div>
-    </a>
-    <br/>
-
-    <a href="http://www.pinterest.com/" target="_blank" rel="external">
-      <div class="social social_pti"></div>
-    </a>
-    <br/>
-    <a href="http://instagram.com/" target="_blank" rel="external">
-      <div class="social social_nst"></div>
-    </a>
-    <br/>
-    <a href="#">
-      <div class="social social_mail"></div>
-    </a>
+<!-- Social section  -->
+<div id="social_media" class="">
+  <ul class="social_list">
+    <li class="social_item">
+      <a href="https://www.facebook.com/pages/Epicerie-de-Cusco/928893590468462" target="_blank">
+        <div class="social_label">FACEBOOK</div>
+        <div class="social_icon social_fb"></div>
+      </a>
+    </li>
+    <li class="social_item">
+      <a href="https://twitter.com/" target="_blank">
+        <div class="social_label">TWITTER</div>
+        <div class="social_icon social_tw"></div>
+      </a>
+    </li>
+    <li class="social_item_spe" data-menuanchor="footerSection">
+      <a href="{{ path('lbf_main_homepage') }}#footerSection">
+        <div class="social_label">CONTACT</div>
+        <div class="social_icon social_mail"></div>
+      </a>
+    </li>
+  </ul>
 </div>
 
 
